Abstracted most of the resources into the "Filter" family of objects Fixed some timing-related bugs with the AsyncTask (image stuff) General cleanup of paths and consolidation of resources Cleanup of potential bugs as highlighted by LINT